new file:   main-120525-signed.pdf 	modified:   main.pdf 	modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -181,7 +181,28 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 
 
 \subsubsection{Bluetooth Low Energy (BLE) и Bluetooth Mesh}
+
+Bluetooth Low Energy (BLE) — низкоэнергетичная радиотехнология, оптимизированная для передачи небольших объёмов данных с минимальным расходом батареи и поддерживающая энергосберегающие
+режимы. BLE определяет четыре базовые роли устройств: Central, Peripheral, Broadcaster и Observer, что позволяет строить радиосеть в топологии «Звезда» с центральным узлом (Central) и периферийными устройствами (Peripheral).
+Частотный диапазон BLE включает 40 каналов в диапазоне 2,4–2,4835 ГГц: 37 каналов для передачи данных и 3 каналов для рекламы. Для масштабируемых IoT-решений существует расширение Bluetooth Mesh, позволяющее узлам ретранслировать
+сообщения и формировать распределённую сеть «many-to-many» поверх BLE.
+
+\paragraph{Роли устройств}
+\begin{itemize}
+  \item \textbf{Peripheral} — энергоэффективный узел-сервер, рекламирующий данные и ожидающий подключения от Central (например, пульсометры, датчики).
+  \item \textbf{Central} — мощный узел-клиент, сканирующий среду и устанавливающий соединения с периферийными устройствами.
+  \item \textbf{Broadcaster} — передаёт рекламные пакеты без установления соединения, полезно для маячков.
+  \item \textbf{Observer} — сканирует рекламные пакеты без инициирования соединения, что снижает энергопотребление при мониторинге.
+\end{itemize}
+
+\paragraph{Применимость в системах автоматизации и IoT.}
+
+BLE широко используется в умных домах и IoT-решениях благодаря низкому энергопотреблению (десятки микроампер в спящем режиме), поддержке топологии «Звезда» и распространённости в смартфонах. Типичные приложения включают управление освещением, термостатами, замками и датчиками (охрана, мониторинг окружающей среды).
+
+\paragraph{BLE Mesh.}
+
 Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов. Так же метод является неоптимальным при небольшом количестве устройств ввиду счетчика TTL который на каждом шаге уменьшается и может обнулиться, не дойдя до адресата [20].
+
 
 \subsubsection{Zigbee}
 Протокол, основанный на IEEE 802.15.4, описывающий построение беспроводной персональной сети. Спецификация Zigbee ориентирована на приложения, требующие гарантированной безопасной передачи данных при относительно небольших скоростях и возможности длительной работы сетевых устройств от автономных источников питания (батарей). Основная особенность технологии Zigbee заключается в том, что она при малом энергопотреблении поддерживает не только простые топологии сети («точка-точка», «дерево» и «звезда»), но и самоорганизующуюся и самовосстанавливающуюся ячеистую (mesh) топологию с ретрансляцией и маршрутизацией сообщений. Кроме того, спецификация Zigbee содержит возможность выбора алгоритма маршрутизации в зависимости от требований приложения и состояния сети.
