new file:   images/BLE-topology-broadcast.png 	new file:   images/BLE-topology-unicast.png 	new file:   images/ZigBee_sketches.png 	new file:   images/Zigbee_device_profile.jpg 	modified:   main.pdf 	modified:   main.tex 	modified:   main.toc

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{mathtools}
 \usepackage{multirow}
 
-\usepackage{subfig}  % или \usepackage{subcaption}
+%\usepackage{subfig}  % или \usepackage{subcaption}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{ulem}
 \usepackage{amsmath}
@@ -23,16 +23,18 @@
 \usepackage{booktabs}  % Для более красивых таблиц (по желанию)
 \usepackage{tabularx}
 \usepackage{enumitem}
-\usepackage{titlesec}
+%\usepackage{titlesec}
 \usepackage{appendix}
 \usepackage{float}    % Для принудительной вставки картинок в определенное место (чтобы они не "плавали") [H]
-
+\usepackage{subcaption}   % для окружений subfigure
+\usepackage{indentfirst}
 \usepackage[nottoc,numbib]{tocbibind} % Пакет tocbibind добавляет в оглавление пункты, которые обычно туда не попадают: библиографию, список иллюстраций, список таблиц и т. д.
+
 
 \begin{document}
 
-%\input{titlepage_example.tex}
-\input{titlepage_practic.tex}
+\input{titlepage_example.tex}
+%\input{titlepage_practic.tex}
 
 
 
@@ -51,6 +53,17 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \newpage
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                            ВВЕДЕНИЕ. Актуальность, постановка задачи и т.д                                                                %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \section{Введение}
 
 \subsection{Актуальность темы}
@@ -63,12 +76,19 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \end{enumerate}
 
 \subsection{Объект исследования}
+
+
 Объектом научно-исследовательской работы являются системы домашней автоматизации, системы хранения, передачи и обработки информации.
 
+
 \subsection{Предмет исследования}
+
+
+
 Предметом научно-исследовательской работы является оптимизация обработки и передачи данных между устройствами ИВ в системе домашней автоматизации.
 
 \subsection{Постановка задачи}
+
 
 В рамках данной работы ставится цель провести комплексное исследование существующих СДА на рынке, проанализировать применяемые в них протоколы и выявить основные недостатки. На основании этого выбрать оптимальный протокол и разработать прототип системы, отвечающий сформулированным требованиям и решающий обозначенный список проблем.
 
@@ -80,7 +100,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
     \item Для связи устройств из разных зон используются шлюзы-ретрансляторы, объединённые в единую распределённую сеть.
 \end{enumerate}
 
-Практическая значимость предлагаемого подхода:
+\paragraph{Практическая значимость предлагаемого подхода:}
 \begin{itemize}
     \item Уменьшение задержек, расширение сфер применения: в предлагаемой системе уменьшается количество узлов между устройством-инициатором и устройством-актуатором (при нахождении в одной сети - до нуля), за счет чего увеличивается скорость выполнения команд и повышается общая отзывчивость системы, что расширяет сферы применения устройств ИВ для построения СДА, ранее нефункциональных ввиду относительно больших задержек.
     \item Повышение комфорта использования: данные о состоянии устройств, как и статистика, собираемая устройствами, хранится и обрабатывается на самих устройствах, что позволяет обеспечить короткое время восстановления работы после внештатных ситуаций (например, отключения питания) без длительной синхронизации.
@@ -91,6 +111,16 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 \end{itemize}
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                       ГЛАВА I. Топологии сетей и протоколы беспроводных сетей                                                             %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
 
@@ -139,10 +169,11 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
 Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо облаке.
 
 
-
-
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                                            Wi-Fi и Wi-Fi HaLow                                                                            %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Wi-Fi и Wi-Fi HaLow}
 
 Протокол Wi-Fi относится к семейству стандартов IEEE 802.11, реализующих беспроводную передачу данных в различных частотных диапазонах:
@@ -151,8 +182,7 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
     \item 5 ГГц — 802.11a/ac;
     \item 6 ГГц — 802.11ax (Wi-Fi 6E).
 \end{itemize}
-Эти протоколы поддерживают высокую пропускную способность и широкое распространение благодаря простой интеграции в клиентские устройства. Однако они изначально не предназначены для энергоэффективных решений, что ограничивает их применение в системах домашней автоматизации, особенно если подразумевается использование батарейного питания. Так же различные виды конфигурации сети могут оказывать значительное влияние на время автономной работы IoT-устройства. \cite{WifiSmartHome}
-
+Эти протоколы поддерживают высокую пропускную способность и широко распространены благодаря простой интеграции в клиентские устройства и устоявшейся практике применения. Однако они изначально не предназначены для энергоэффективных решений, что ограничивает их применение в системах домашней автоматизации, особенно если подразумевается использование батарейного питания. Так же различные виды конфигурации сети могут оказывать значительное влияние на время автономной работы IoT-устройства. \cite{WifiSmartHome}
 
 \paragraph{IEEE 802.11ah (Wi-Fi HaLow)} — расширение Wi-Fi в суб-ГГц диапазоне для IoT и промышленных задач. Обеспечивает дальность до километра, поддержку до тысяч устройств и низкое энергопотребление, что проиллюстрированно на рис.  \ref{fig:wifi_energy_eff}, благодаря механизмам Target Wake Time и RAW. Сохраняет уровень MAC совместимым с Wi-Fi, унаследовав безопасность и QoS.
 
@@ -169,17 +199,23 @@ With the increasing number of Internet of Things (IoT) devices in home automatio
   \item \textbf{Узлы:} 
     \begin{itemize}
       \item \emph{STA} (датчики/актуаторы) с поддержкой энергосбережения.
-      \item \emph{AP} (Access Point), иногда \emph{Relay AP} (ретрансляторы).
+      \item \emph{AP} (Access Point) — единственный координатор сети, задаваемый при развертывании сети администратором.
+      \item \emph{Relay AP} (опционально) — специальные узлы (ретрансляторы)
     \end{itemize}
-  \item \textbf{Топология:} нет встроенного mesh L2 -- дерево с ограниченной глубиной.
+  \item \textbf{Топология:} поддерживаются несколько вариантов: звездная и древовидная с ретрансляцией (ограниченное дерево без полного L2-mesh) для расширения до удалённых STA.
 \end{itemize}
 
 \paragraph{Преимущества и недостатки:}
 
-в качестве преимуществ IEEE 802.11ah можно выделить большую дальность связи (до 3 км вне помещений при использовании ретранслятора Relay AP), высокую плотность подключений (возможность обслуживания сотен устройств одной точкой доступа), а также низкое энергопотребление при малой активности. Вместе с тем, стандарту присущи: низкая пропускная способность по сравнению с Wi-Fi в диапазонах 2,4/5/6 ГГц, более высокая сложность и стоимость модулей по сравнению с устройствами на базе 802.15.4, из-за чего данный протокол не получил широкого распространения среди потребительских устройств, заняв только небольшую нишу промышленных IoT-устройств; а также сложности лицензирования различных диапазонов частот для разных стран.
+В качестве преимуществ IEEE 802.11ah можно выделить большую дальность связи (до 3 км вне помещений при использовании ретранслятора Relay AP), высокую плотность подключений (возможность обслуживания сотен устройств одной точкой доступа), а также низкое энергопотребление при малой активности. Вместе с тем, стандарту присущи: низкая пропускная способность по сравнению с Wi-Fi в диапазонах 2,4/5/6 ГГц, более высокая сложность и стоимость модулей по сравнению с устройствами на базе 802.15.4, из-за чего данный протокол не получил широкого распространения среди потребительских устройств, заняв только небольшую нишу промышленных IoT-устройств; а также сложности лицензирования различных диапазонов частот для разных стран.
+При отказе единственного AP вся BSS теряет синхронизацию и связь STA; стандарт не содержит механизмов внутреннего резервирования или автоматического фейловера.
 
 
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                                    BLUETOOTH AND BLUETOOTH LOW ENERGY                                                                     %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Bluetooth Low Energy (BLE) и Bluetooth Mesh}
 
 Bluetooth Low Energy (BLE) — низкоэнергетичная радиотехнология, оптимизированная для передачи небольших объёмов данных с минимальным расходом батареи и поддерживающая энергосберегающие
@@ -189,29 +225,140 @@ Bluetooth Low Energy (BLE) — низкоэнергетичная радиоте
 
 \paragraph{Роли устройств}
 \begin{itemize}
-  \item \textbf{Peripheral} — энергоэффективный узел-сервер, рекламирующий данные и ожидающий подключения от Central (например, пульсометры, датчики).
-  \item \textbf{Central} — мощный узел-клиент, сканирующий среду и устанавливающий соединения с периферийными устройствами.
-  \item \textbf{Broadcaster} — передаёт рекламные пакеты без установления соединения, полезно для маячков.
-  \item \textbf{Observer} — сканирует рекламные пакеты без инициирования соединения, что снижает энергопотребление при мониторинге.
+  \item \textbf{Peripheral} — Энергоэффективное устройство, периодически транслирующее (advertise) данные и ждущее подключения от центрального узла (Central) \ref{fig:fig_BLE_topology_unicast}. Характерные примеры: пульсометры, датчики температуры, трекеры активности.
+  \item \textbf{Central} — Стационарное устройство, выполняющее сканирование эфирных пакетов и устанавливающее соединения с одним или несколькими периферийными узлами. Часто это смартфоны, планшеты или концентраторы IoT--сетей, которым нужны данные от множества сенсоров.
+  \item \textbf{Broadcaster} — Устройство с односторонней рекламой: без установления соединения периодически рассылает рекламные пакеты с полезной информацией (beacons) \ref{fig:fig_BLE_topology_broadcast}. Используется для вещания маячков близости, рекламных кампаний, навигации в помещениях (Indoor positioning system).
+  \item \textbf{Observer} — Стационарное устройство‑приёмник, которое пассивно сканирует эфир, собирая (несвязанную) информацию из рекламных пакетов Broadcaster’ов и Peripheral’ов. Применяется для мониторинга окружающей среды, подсчёта посетителей, сбора статистики о маячках.
 \end{itemize}
+
+
+\begin{figure}[htbp]
+  \centering
+  % Первая подфигура, выровнена по верху
+  \begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{images/BLE-topology-broadcast.png}
+    \caption{Broadcaster/Observer}
+    \label{fig:fig_BLE_topology_broadcast}
+  \end{subfigure}\hfill
+  % Вторая подфигура, тоже по верху
+  \begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{images/BLE-topology-unicast.png}
+    \caption{Peripheral/Central}
+    \label{fig:fig_BLE_topology_unicast}
+  \end{subfigure}
+
+  % Общая подпись
+  \caption{Профили устройств BLE\cite{IMG_BLE_topologies}}
+  \label{fig:twophotos}
+\end{figure}
+
+
 
 \paragraph{Применимость в системах автоматизации и IoT.}
 
-BLE широко используется в умных домах и IoT-решениях благодаря низкому энергопотреблению (десятки микроампер в спящем режиме), поддержке топологии «Звезда» и распространённости в смартфонах. Типичные приложения включают управление освещением, термостатами, замками и датчиками (охрана, мониторинг окружающей среды).
+BLE широко используется в умных домах, торговых и продуктовых центрах, медицине и иных сферах ИВ благодаря низкому энергопотреблению (десятки микроампер в спящем режиме) и широкой распространенности среди потребительских устройств.
 
 \paragraph{BLE Mesh.}
 
-Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов. Так же метод является неоптимальным при небольшом количестве устройств ввиду счетчика TTL который на каждом шаге уменьшается и может обнулиться, не дойдя до адресата [20].
+Т.к. BLE Mesh лишь расширение стандарта, использующий особым образом режим рекламы для лавинообразного передачи сообщений, по техническим характеристикам он сильно похож на BLE. Для поддержания совместимости было использовано лавинообразное рассылка (flooding \cite{BLE_mesh_spec}), которая с большим количеством устройств может значительно увеличить территорию покрытия, но, с другой стороны, может привести к избыточной загруженности каналов, что после некоторой отметки в количестве устройств может привести к потерям пакетов.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                                                 ZIGBEE                                                                                    %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{Zigbee и Zigbee Pro}
+
+Стандарт ZigBee основан на IEEE~802.15.4 и работает в нелицензируемых ISM-диапазонах \cite{IEEE802_15_4_2020,ZIGBEE_SPEC_R23}: 2.4ГГц(глобально доступен и используется во всем мире), 915МГц (США, Канада, Австралия и Израиль).  868МГц (ЕC, Великобритания, Турция)
+
+Области применения включают умные дома и городскую инфраструктуру, где используются системы управления освещением, датчики движения, решения для безопасности и “умные” счётчики в составе городских систем управления; промышленную автоматизацию с круглосуточным мониторингом состояния оборудования, предиктивным обслуживанием, сбором данных с вибрационных и температурных датчиков, дистанционным управлением приводами и оптимизацией технологических процессов; и медицинский мониторинг для удалённого сбора жизненных показателей пациентов и контроля заряда портативных медицинских устройств.
 
 
-\subsubsection{Zigbee}
-Протокол, основанный на IEEE 802.15.4, описывающий построение беспроводной персональной сети. Спецификация Zigbee ориентирована на приложения, требующие гарантированной безопасной передачи данных при относительно небольших скоростях и возможности длительной работы сетевых устройств от автономных источников питания (батарей). Основная особенность технологии Zigbee заключается в том, что она при малом энергопотреблении поддерживает не только простые топологии сети («точка-точка», «дерево» и «звезда»), но и самоорганизующуюся и самовосстанавливающуюся ячеистую (mesh) топологию с ретрансляцией и маршрутизацией сообщений. Кроме того, спецификация Zigbee содержит возможность выбора алгоритма маршрутизации в зависимости от требований приложения и состояния сети.
-Основными областями применения технологии Zigbee являются беспроводные сенсорные сети, автоматизация жилья («Умный дом» и «Интеллектуальное здание»), медицинское оборудование, системы промышленного мониторинга и управления, а также бытовая электроника и «периферия» персональных компьютеров.
-Способность к самоорганизации и самовосстановлению, ячеистая (mesh-) топология, защищённость, высокая помехоустойчивость, низкое энергопотребление и отсутствие необходимости получения частотного разрешения делают Zigbee-сеть подходящей основой для беспроводной инфраструктуры систем позиционирования в режиме реального времени (RTLS).
-В России, как и в большинстве стран мира за исключением США, ЕС и Австралии разрешенная частота составляет 2.4 ГГц, которая является общей для других технологий, таких как WiFi и Bluetooth, что может привести к избыточной загруженности каналов и большой потере сообщений.
+\paragraph{Основные элементы архитектуры и топологии}
+\begin{itemize}
+  \item \textbf{Узлы:} 
+    \begin{itemize}
+      \item \emph{Координатор (ZC)} единственный узел, создаёт PAN: сканирует каналы, выбирает свободный, задаёт PAN\_ID, Extended PAN\_ID, ключи безопасности, хранит таблицы маршрутизации и аутентификации.\newline Работает также как маршрутизатор.
+      \item \emph{Маршрутизатор (ZR)} mains-powered, всегда активен, расширяет покрытие, ретранслирует пакеты, обеспечивает альтернативные пути.
+      \item \emph{Конечное устройство (ZED)} battery-powered, не ретранслирует, общается только с родителем (координатором или маршрутизатором), включает режим сна.
+    \end{itemize}
+  \item \textbf{Топология:} ZigBee поддерживает три базовые топологии:
+    \begin{itemize}
+      \item \emph{Звёздная топология (Star)} Все узлы подключены непосредственно к координатору. Простая настройка, но ограничена радиусом и зависит от координатора.
+      \item \emph{Деревовидная топология (Cluster-Tree)} Иерархия: координатор → маршрутизаторы уровней → конечные устройства. Адресация упрощена tree-адресацией, но узлы-маршрутизаторы становятся критическими точками.
+      \item \emph{ячеистая топология (Mesh-network)} Любой маршрутизатор может ретранслировать пакет между любыми двумя узлами. Поддерживает самовосстановление при отказах и динамическое подключение новых устройств.
+    \end{itemize}
+\end{itemize}
+
+
+Координатор задаётся программно администратором, но при запуске сети он автоматически:
+\begin{itemize}
+    \item сканирует каналы ISM;
+    \item выбирает наименее загруженный канал;
+    \item присваивает PAN\_ID;
+    \item задаёт параметры: \texttt{NWK\_MAX\_CHILDREN}, \texttt{NWK\_MAX\_DEPTH}, \texttt{MAX\_ROUTERS}.
+\end{itemize}
+
+В сетях IEEE 802.15.4 с beacon-режимом координатор через равные интервалы от 15 мс до 4 минут рассылает фрейм-маяк, который объявляет начало очередного суперфрейма и указывает доступные слоты доступа\cite{IEEE802_15_4_2020}; обычно именно координатор является главным источником этих маяков, хотя в древовидных (cluster-tree) конфигурациях роль ретрансляторов могут брать на себя маршрутизаторы, тогда как в обычном mesh-режиме они маяки не посылают; при этом автоматическое резервирование источников маяков не предусмотрено, поэтому отказ узла-маяка приводит к потере синхронизации всей сети, и её приходится вручную восстанавливать.
+
+
+\paragraph{Обнаружение маршрута} Процесс начинается с того, что узел-инициатор рассылает по сети широковещательный запрос на установление маршрута (RREQ), при этом указывается определённая метрика, например, количество переходов или качество канала.
+Узел назначения, получив несколько RREQ от разных маршрутов, выбирает из них наиболее подходящий — согласно метрике — и отправляет одноадресный ответ (RREP) обратно к источнику, используя обратный путь, по которому был получен лучший запрос.
+
+\paragraph{Передача и ретрансляция} После получения ответа (RREP) начинается передача данных. Информация передаётся от источника к получателю через промежуточные узлы. Каждый промежуточный узел проверяет свою таблицу маршрутизации, чтобы определить, куда направить пакет дальше, и ретранслирует пакет следующему узлу по цепочке.
+Если ожидаемое подтверждение доставки (ACK) не поступает, инициируется сообщение об ошибке маршрута (RERR). В таком случае начинается повторное построение маршрута — запускается новый процесс рассылки RREQ.
+
+
+\paragraph{Шаблоны устройств (Application Profiles)}
+На уровне приложения Zigbee определяет профили устройств:
+\begin{itemize}
+ \item \textbf{Публичные профили:} Home Automation, Commercial Building Automation и др.: лампы, выключатели, датчики, термостаты, розетки.
+ \item \textbf{Частные профили:} Производители могут создавать собственные профили, но контроллер должен поддерживать их для взаимодействия.
+\end{itemize}
+
+Каждый профиль включает: \texttt{Profile ID}, \texttt{Device ID}, \texttt{Cluster IDs} и назначение энптойтов (адрес и адресат). Контроллер распознаёт и управляет устройством только при совпадении этих идентификаторов.
+
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/Zigbee_device_profile.jpg}
+    \caption{Профили устройств Zigbee \cite{IMG_Zigbee_profile}}
+    \label{fig:cloud_event_processing}
+\end{figure}
+
+\paragraph{Влияние отказов}
+\begin{itemize}
+    \item \textbf{Координатор:} при его отказе сеть не функционирует, требует перезапуска с новым координатором \cite{Fault_Tolerance_ZigBee}.
+    \item \textbf{Маршрутизатор:} потеря альтернативных путей, временная деградация доступности узлов, последующее самовосстановление \cite{Fault_Tolerance_ZigBee}.
+    \item \textbf{Конечное устройство:} затрагивается только функционал этого узла, остальная сеть продолжает работу.
+\end{itemize}
+
+\paragraph{Zigbee Pro.}  
+
+Zigbee Pro представляет собой расширенную реализацию базового протокола Zigbee, оптимизированную для высоконагруженных и масштабируемых сетей \cite{NXP_JNUG3101}. В отличие от классического Zigbee, Pro-версия обеспечивает поддержку сетей размером до нескольких тысяч узлов, более гибкую и самовосстанавливающуюся маршрутизацию, улучшенную управляющую функциональность (Many-to-One и Source Routing) и усиленные механизмы безопасности с отдельными ключами для транспортного и сетевого уровней.
+
+В случае отказа координатора или маршрутизатора, сеть на базе Zigbee Pro демонстрирует лучшие возможности по сохранению связи и быстрому восстановлению работоспособности \cite{Fault_Tolerance_ZigBee} благодаря:
+\begin{itemize}
+  \item \textbf{Самовосстановлению маршрутов:} оставшиеся маршрутизаторы автоматически перестраивают таблицы маршрутов без участия центрального узла.
+  \item \textbf{Source Routing и Many-to-One маршруты:} устройства могут кэшировать рабочие пути и переключаться на альтернативные узлы при недоступности основного, что снижает время простоя.
+  \item \textbf{Гибкая архитектура Trust Center:} в Pro-режиме можно реализовать избыточные или внешние Trust Center (через облачные сервера или резервные координаторы), что позволяет продолжать авторизацию и обновление ключей даже при выходе из строя основного координатора.
+\end{itemize}
+
+Таким образом, выбор Zigbee Pro вместо «простого» Zigbee особенно оправдан в критичных системах, где недопустима потеря управляемости и долговременная деградация сети при отказах ключевых узлов.  
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                                           СРАВНЕНИЕ ПРОТОКОЛОВ                                                                            %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \subsubsection{Сравнение представленных протоколов}
-Был составлен сравнительный график различных протоколов передачи сообщений.\
+На рис.~\ref{fig:protocols_range_vs_speed} представлен сравнительный график различных протоколов беспроводных сетей. Была составлена таблица~\ref{table:compare_wireless_protocols}.
 
 \begin{figure}[h]
     \centering
@@ -221,7 +368,7 @@ BLE широко используется в умных домах и IoT-реш
     \label{fig:protocols_range_vs_speed}
 \end{figure}
 
-Так же была составлена сравнительная таблица.
+
 Wi-Fi Mesh (IEEE 802.11s) и BLE Mesh работают полностью без единого сетевого координатора: в Wi-Fi Mesh каждый узел (Mesh Point) самостоятельно участвует в маршрутизации
 по протоколу HWMP, а BLE Mesh применяет управляемое наводнение без роли координатора доставки. Zigbee же требует наличия PAN Coordinator’а, который создаёт и управляет
 сетью, выдавая адреса устройствам-роутерам. Z-Wave полагается на Primary Controller (и Static Update Controller) для добавления узлов и хранения
@@ -250,6 +397,7 @@ Wi-Fi Mesh (IEEE 802.11s) и BLE Mesh работают полностью без
         \hline
     \end{tabularx}
     \caption{Сравнение беспроводных mesh-технологий}
+    \label{table:compare_wireless_protocols}
 \end{table}
 
 \subsubsection{Доступность для разработчиков платформ, поддерживающих представленные протоколы}
@@ -265,9 +413,20 @@ ESP32-H2 оснащены аппаратным радио IEEE 802.15.4 (Zigbee/
 
 \newpage
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                                                                                                           %
+%                                                       ГЛАВА I. Топологии сетей и протоколы беспроводных сетей                                                             %
+%                                                                                                                                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \section{Глава 2}
 
-\subsection{Краткое описание предлагаемой системы}
+\subsection{Описание системы}
 Централизованные СДА, имеющие ЦУД, обладая несомненными преимуществами, такими как простота настройки и реализации,
 также имеют ряд недостатков: низкая скорость реакции, невысокая надежность и безопасность, сильно зависящая от ЦУД
 и облачной инфраструктуры. Для интеграции устройств, находящихся в разных сетях, используется централизованная
@@ -452,11 +611,27 @@ K, перестанут обрабатываться межзонные собы
 \bibitem{SecuritySmartHome2} Vardakis~G., Hatzivasilis~G., Koutsaki~E., Papadakis~N. Review of smart-home security using the internet of things // Electronics. 2024. No~13 P.~33--43.
 \bibitem{YNDX_hub} Центр умного дома «Яндекс Хаб» модель YNDX-00510. Инструкция по эксплуатации [Электронный ресурс]: \url{URL: https://yastatic.net/s3/doc-binary/src/support/smart-home/hub/hub-manual.pdf} (дата обращения: 17.03.2025).
 \bibitem{BLE_mesh_spec} Specifications and Documents Mesh Protocol [Электронный ресурс]: \url{URL: https://www.bluetooth.com/specifications/specs/html/?src=MshPRT_v1.1/out/en/index-en.html} (дата обращения: 11.05.2025).
+%Zigbee & Zigbee Pro
+\bibitem{ZIGBEE_SPEC_R23} Zigbee Specification Revision 23 [Электронный ресурс]: \url{https://csa-iot.org/wp-content/uploads/2023/04/05-3474-23-csg-zigbee-specification-compressed.pdf} (дата обращения: 20.05.2025).
+
+\bibitem{IEEE802_15_4_2020} IEEE Std 802.15.4-2020: IEEE Standard for Low-Rate Wireless Personal Area Networks (LR-WPANs) [Электронный ресурс]: \url{https://standards.ieee.org/standard/802_15_4-2020.html} (дата обращения: 20.05.2025).
+
+\bibitem{Fault_Tolerance_ZigBee} Richard Alena, Ray Gilstrap, Jarren Baldwin, Thom Stone, Pete Wilson. Fault Tolerance in ZigBee Wireless Sensor Networks // NASA Ames Research Center, Moffett Field [Электронный ресурс]: \url{URL: https://ntrs.nasa.gov/api/citations/20110012426/downloads/20110012426.pdf?utm_source=chatgpt.com} (дата обращения: 20.05.2025).
+
+\bibitem{ZCL_SPEC} ZigBee Cluster Library Specification (07-5123-08), Connectivity Standards Alliance [Электронный ресурс]: \url{https://zigbeealliance.org/wp-content/uploads/2021/10/07-5123-08-Zigbee-Cluster-Library.pdf} (дата обращения: 20.05.2025).
+
+\bibitem{NXP_JNUG3101} Zigbee Pro Stack User Guide (JN-UG-3101), NXP Semiconductors [Электронный ресурс]: \url{https://www.nxp.com/docs/en/user-guide/JN-UG-3101.pdf} (дата обращения: 20.05.2025).
+
+%images
 \bibitem{IMG_protocol_compare} Сравнительный анализ стандартов связи для сетей IoT [Электронный ресурс]: \url{URL: https://habr.com/ru/companies/msw/articles/720518/} (дата обращения: 11.05.2025).
 
 \bibitem{IMG_protocol_compare_power_eff} Wi-Fi HaLow™ and LoRaWAN: How do the technologies compare? [Электронный ресурс]: \url{URL: https://dev.wi-fi.org/zh-hans/beacon/y-zachary-freeman/wi-fi-halow-and-lorawan-how-do-the-technologies-compare} (дата обращения: 11.05.2025).
 
 \bibitem{IMG_observer_vs_pub_sub} Observer vs Pub-Sub [Электронный ресурс]: \url{URL: https://habr.com/ru/articles/270339/} (дата обращения: 11.05.2025).
+
+\bibitem{IMG_BLE_topologies} Generic Access Profile (GAP) Roles [Электронный ресурс]: \url{URL: https://developerhelp.microchip.com/xwiki/bin/view/applications/ble/introduction/bluetooth-architecture/bluetooth-host-layer/gap/roles/} (дата обращения: 19.05.2025).
+
+\bibitem{IMG_Zigbee_profile} Bachelor Seminar Paper  [Электронный ресурс]: \url{URL: https://www.auto.tuwien.ac.at/bib/pdf_TR/TR0148.pdf} (дата обращения: 20.05.2025).
 
 \end{thebibliography}
 
